# python-redis-kiwi

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  README.md  init_hooks.sh  pyproject.toml  requirements.txt  test_cov.sh
.github/workflows/: pylint.yaml  pytest.yaml
rest_kv/: main.py
rest_kv/api/: routes.py
tests/: conftest.py
tests/api/: test_routes.py
